# DDA-2020

./: BAT.h  CMakeLists.txt  DDA-2020.cpp  DDA-2020.vcxproj  DDA-2020.vcxproj.filters  Error.cpp  Error.h  FST.cpp  FST.h  GRB.cpp  Generation.cpp  Generation.h  IT.cpp  IT.h  In.cpp  In.h  LT.cpp  LT.h  Log.cpp  Log.h  MFST.cpp  MFST.h  Parm.cpp  Parm.h  README.md  Semantic.cpp  Semantic.h  Tests.h  compile.bat  course_in.txt  in.txt  in.txt.asm  log.txt  out.asm  out.txt  test.bat  test.txt  testLog.txt  testOut.txt  testOut2.txt
docs/: Задание на КП.docx  Пояснительная записка.docx  Титульный лист.docx
libs/: StandartLibrary.lib
src/: DDA-2020.cpp  Error.cpp  GRB.h  Generation.cpp  IT.h  In.cpp  LT.cpp  Log.cpp  MFST.cpp  Parm.cpp  Semantic.h
